[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pia"
description = "TODO"
readme = "README.md"
requires-python = ">=3.9"
# license = {text = "BSD 3-Clause License"}
dependencies = [
  "astropy",
  "scipy",
  "ccdproc",
  "matplotlib",
  "numpy",
  "pyyaml",
  "rich-click",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["numpydoc", "pydata-sphinx-theme", "sphinx", "sphinx-automodapi"]
test = ["coverage[toml]", "pytest", "pytest-cov"]

[project.scripts]
pia = "pia.__main__:cli"

[project.urls]
repository = "https://github.com/asigot/PIA"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/pia/_version.py"

[tool.black]
line-length = 88
target-version = ['py39']
preview = true

[tool.coverage]
[tool.coverage.run]
source = ["pia"]
omit = [
  "pia/_version*",
  "*/pia/_version*",
]
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover", # Have to re-enable the standard pragma
  "except ImportError", # Don't complain about packages we have installed
  "raise AssertionError", # Don't complain if tests don't hit assertion code
  "raise NotImplementedError",
  "'def main(.*):'", # Don't complain about script hooks
  "if __name__ == .__main__.:",
  "def _ipython_key_completions_", # Don't complain about IPython completion
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
follow_imports = "silent"
ignore_missing_imports = true
# disable_error_code = misc
files = "src"
# mypy_path = type_stubs

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
filterwarnings = [
    # action:message:category:module:lineno
    # "error",
    "ignore:.*Warning: 'partition' will ignore the 'mask' of the MaskedArray.*:Userwarning:numpy",
]
# doctest_plus = enabled
# text_file_format = rst
# addopts = --doctest-rst

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501", "E731", "E741"]
